; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_backtrace.c_isc_backtrace_gettrace.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_backtrace.c_isc_backtrace_gettrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISC_R_FAILURE = common dso_local global i32 0, align 4
@ISC_R_NOTIMPLEMENTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isc_backtrace_gettrace(i8** %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8** %0, i8*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i8**, i8*** %5, align 8
  %9 = icmp eq i8** %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %7, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %3
  %14 = load i32, i32* @ISC_R_FAILURE, align 4
  store i32 %14, i32* %4, align 4
  br label %19

15:                                               ; preds = %10
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @UNUSED(i32 %16)
  %18 = load i32, i32* @ISC_R_NOTIMPLEMENTED, align 4
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @UNUSED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
